ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/Loan_Offer__c.object-meta.xml
<CustomObject>
    <label>Loan Offer</label>
    <nameField>
        <displayFormat>LON-{0000000}</displayFormat>
        <label>Loan Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>