ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/fields/Loan_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agent_Name__c</fullName>
    <label>Loan Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>