ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/fields/Loan_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agent_Number__c</fullName>
    <label>Loan Agent Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>