ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/fields/Loan_Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Enquiry_Number__c</fullName>
    <label>Loan Enquiry Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>