ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/fields/Loan_Request__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Number</label>
    <referenceTo>Loan_Request__c</referenceTo>
    <relationshipLabel>Loan Offers</relationshipLabel>
    <relationshipName>Loan_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>