ebikes-lwc-master/force-app/main/default/objects/Loan_Offer__c/fields/Rate_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rate_Of_Interest__c</fullName>
    <label>Rate Of Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>